// <auto-generated />
using System;
using AetherGuard.Core.Data;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;

#nullable disable

namespace AetherGuard.Core.Data.Migrations
{
    [DbContext(typeof(ApplicationDbContext))]
    [Migration("20260202103549_AddExternalSignalFeeds")]
    partial class AddExternalSignalFeeds
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "8.0.0")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("AetherGuard.Core.Models.Agent", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<string>("AgentToken")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("agenttoken");

                    b.Property<string>("Hostname")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("hostname");

                    b.Property<DateTimeOffset>("LastHeartbeat")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("lastheartbeat");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("status");

                    b.HasKey("Id");

                    b.HasIndex("AgentToken")
                        .IsUnique();

                    b.ToTable("agents", (string)null);
                });

            modelBuilder.Entity("AetherGuard.Core.Models.AgentCommand", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("Action")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("action");

                    b.Property<Guid>("AgentId")
                        .HasColumnType("uuid")
                        .HasColumnName("agent_id");

                    b.Property<Guid>("CommandId")
                        .HasColumnType("uuid")
                        .HasColumnName("command_id");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<DateTime>("ExpiresAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("expires_at");

                    b.Property<string>("Nonce")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("nonce");

                    b.Property<string>("Parameters")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("parameters");

                    b.Property<string>("Signature")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("signature");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("status");

                    b.Property<DateTime?>("UpdatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at");

                    b.Property<string>("WorkloadId")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("workload_id");

                    b.HasKey("Id");

                    b.ToTable("agent_commands", (string)null);
                });

            modelBuilder.Entity("AetherGuard.Core.Models.CommandAudit", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("Id"));

                    b.Property<string>("Action")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("action");

                    b.Property<string>("Actor")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("actor");

                    b.Property<Guid>("CommandId")
                        .HasColumnType("uuid")
                        .HasColumnName("command_id");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<string>("Error")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("error");

                    b.Property<string>("Result")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("result");

                    b.HasKey("Id");

                    b.ToTable("command_audits", (string)null);
                });

            modelBuilder.Entity("AetherGuard.Core.Models.ExternalSignal", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("Id"));

                    b.Property<string>("Category")
                        .HasColumnType("text")
                        .HasColumnName("category");

                    b.Property<string>("ExternalId")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("external_id");

                    b.Property<DateTimeOffset>("IngestedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("ingested_at");

                    b.Property<DateTimeOffset>("PublishedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("published_at");

                    b.Property<string>("Region")
                        .HasColumnType("text")
                        .HasColumnName("region");

                    b.Property<string>("Severity")
                        .HasColumnType("text")
                        .HasColumnName("severity");

                    b.Property<string>("Source")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("source");

                    b.Property<string>("Summary")
                        .HasColumnType("text")
                        .HasColumnName("summary");

                    b.Property<string>("Tags")
                        .HasColumnType("text")
                        .HasColumnName("tags");

                    b.Property<string>("Title")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("title");

                    b.Property<string>("Url")
                        .HasColumnType("text")
                        .HasColumnName("url");

                    b.HasKey("Id");

                    b.HasIndex("PublishedAt");

                    b.HasIndex("Source", "ExternalId")
                        .IsUnique();

                    b.ToTable("external_signals", (string)null);
                });

            modelBuilder.Entity("AetherGuard.Core.Models.ExternalSignalFeedState", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("Id"));

                    b.Property<int>("FailureCount")
                        .HasColumnType("integer")
                        .HasColumnName("failure_count");

                    b.Property<string>("LastError")
                        .HasColumnType("text")
                        .HasColumnName("last_error");

                    b.Property<DateTimeOffset>("LastFetchAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("last_fetch_at");

                    b.Property<int?>("LastStatusCode")
                        .HasColumnType("integer")
                        .HasColumnName("last_status_code");

                    b.Property<DateTimeOffset?>("LastSuccessAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("last_success_at");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("name");

                    b.Property<string>("Url")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("url");

                    b.HasKey("Id");

                    b.HasIndex("Name")
                        .IsUnique();

                    b.ToTable("external_signal_feeds", (string)null);
                });

            modelBuilder.Entity("AetherGuard.Core.Models.SchemaRegistryEntry", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("Id"));

                    b.Property<DateTimeOffset>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<string>("Schema")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("schema");

                    b.Property<string>("Subject")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("subject");

                    b.Property<int>("Version")
                        .HasColumnType("integer")
                        .HasColumnName("version");

                    b.HasKey("Id");

                    b.HasIndex("Subject", "Version")
                        .IsUnique();

                    b.ToTable("schema_registry", (string)null);
                });

            modelBuilder.Entity("AetherGuard.Core.Models.TelemetryRecord", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint")
                        .HasColumnName("Id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("Id"));

                    b.Property<DateTime>("Timestamp")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("Timestamp");

                    b.Property<string>("AgentId")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("AgentId");

                    b.Property<double>("AiConfidence")
                        .HasColumnType("double precision")
                        .HasColumnName("AiConfidence");

                    b.Property<string>("AiStatus")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("AiStatus");

                    b.Property<double>("CpuUsage")
                        .HasColumnType("double precision")
                        .HasColumnName("CpuUsage");

                    b.Property<long>("DiskAvailable")
                        .HasColumnType("bigint")
                        .HasColumnName("DiskAvailable");

                    b.Property<double>("MemoryUsage")
                        .HasColumnType("double precision")
                        .HasColumnName("MemoryUsage");

                    b.Property<double?>("PredictedCpu")
                        .HasColumnType("double precision")
                        .HasColumnName("PredictedCpu");

                    b.Property<bool>("RebalanceSignal")
                        .HasColumnType("boolean")
                        .HasColumnName("RebalanceSignal");

                    b.Property<string>("RootCause")
                        .HasColumnType("text")
                        .HasColumnName("RootCause");

                    b.Property<string>("WorkloadTier")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("WorkloadTier");

                    b.HasKey("Id", "Timestamp");

                    b.ToTable("TelemetryRecords", (string)null);
                });
#pragma warning restore 612, 618
        }
    }
}
